syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.tnmk.practice.springgrpc.protobuf";

import "ItemProto.proto";

service ExternalGrpcService {
    rpc getExternalItem(ItemIdProto) returns (ItemProto);
}